# miniad

./: .cursorignore  .gitignore  CMakeLists.txt  README.md
.cursor/rules/: 000-Onboarding.mdc  001-Core-Development-Guidelines.mdc  002-Tutorial-Voice.mdc  010-Cpp-Style-Conventions.mdc  020-Testing-Conventions.mdc  030-TDD-Workflow.mdc  040-Progress-Tracking.mdc
cmake/: FetchCatch2.cmake
docs/: Phase-Checklist.md  Progress-Log.md  Tutorial-Plan.md
include/miniad/: core.hpp  expr.hpp  matrix.hpp  scalar.hpp
tests/: test_dummy.cpp  test_expr.cpp  test_matrix.cpp  test_scalar.cpp
